--- a/sources/abstract_tests/core/ATS22_req-class-not-core-stt-subtype-of-core.adoc
+++ b/sources/abstract_tests/core/ATS22_req-class-not-core-stt-subtype-of-core.adoc
@@ -1,7 +1,9 @@
 [[ats_req-class-not-core-stt-subtype-of-core]]
 [abstract_test]
+.Every extension has a consistent target type
 ====
 [%metadata]
+name:: Every extension has a consistent target type
 identifier:: /conf/core/req-class-not-core-stt-subtype-of-core
 target:: /req/core/req-class-not-core-stt-subtype-of-core
 test-purpose:: Validate that every requirements class in the standard, with the exception of the core, has a standardization target type which is a subtype of that of the core. And that every requirement class, with the exception of the core, has the core as a direct dependency.
