--- a/sources/abstract_tests/core/ATS24_extensions-conformant-to-modspec.adoc
+++ b/sources/abstract_tests/core/ATS24_extensions-conformant-to-modspec.adoc
@@ -1,7 +1,9 @@
 [[ats_extensions-conformant-to-the-modspec]]
 [abstract_test]
+.Conformance to this ModSpec is required for any extensions
 ====
 [%metadata]
+name:: Conformance to this ModSpec is required for any extensions
 identifier:: /conf/core/extensions-conformant-to-the-modspec
 target:: /req/core/extensions-conformant-to-the-modspec
 test-purpose:: Validate that the standard requires all conformant extensions to be conformant to the ModSpec.
