--- a/sources/abstract_tests/core/ATS2_assigned-uri.adoc
+++ b/sources/abstract_tests/core/ATS2_assigned-uri.adoc
@@ -1,10 +1,12 @@
 [[ats_all-components-assigned-uri]]
 [abstract_test]
+.All components have an assigned URI
 ====
 [%metadata]
+name:: All components have an assigned URI
 identifier:: /conf/core/all-components-assigned-uri
 target:: /req/core/all-components-assigned-uri
-test-purpose:: Validate that each component of the standard, including requirements, requirements modules, requirements classes, 
+test-purpose:: Validate that each component of the standard, including requirements, requirements modules, requirements classes,
 conformance test, conformance modules, and conformance test classes are assigned a unique identifer or label.
 test-method:: Inspect the document to verify the above.
 ====
