--- a/sources/permissions/core/PER003_repeated-requirements.adoc
+++ b/sources/permissions/core/PER003_repeated-requirements.adoc
@@ -1,9 +1,11 @@
 [[per-3]]
 
 [permission]
+.Repeated requirements applies to different standardization target types
 ====
 [%metadata]
+name:: Repeated requirements applies to different standardization target types
 identifier:: /per/core/repeated-requirements
-part:: If needed, a requirement _MAY_ be repeated word for word in another requirement up
+statement:: If needed, a requirement _MAY_ be repeated word for word in another requirement up
 to but not including the identification of the standardization target type.
 ====
