--- a/sources/recommendations/core/REC005-optional-tests.adoc
+++ b/sources/recommendations/core/REC005-optional-tests.adoc
@@ -1,10 +1,12 @@
 [[rec-5]]
 
 [recommendation]
+.Identification of optional tests in imported requirements classes
 ====
 [%metadata]
+name:: Identification of optional tests in imported requirements classes
 identifier:: /rec/core/optional-tests
-part:: If a requirements class is from another standard, the current standard
+statement:: If a requirements class is from another standard, the current standard
 _SHOULD_ identify any optional tests in that conformance class that are required
 by the current standard's core requirements class. See
 xref:/req/core/imported-requirements-class[].
