--- a/sources/requirements/core/REQ002_assigned-uri.adoc
+++ b/sources/requirements/core/REQ002_assigned-uri.adoc
@@ -1,11 +1,12 @@
-[[req-2]]
 
 [requirement]
+.Assigned URIs for all components
 ====
 [%metadata]
+name:: Assigned URIs for all components
 identifier:: /req/core/all-components-assigned-uri
-part:: Each component of the standard, including requirements, requirements packages, requirements classes, 
-conformance tests, conformance packages, and conformance test classes _SHALL_ be assigned a unique identifier and/or label. 
+statement:: Each component of the standard, including requirements, requirements packages, requirements classes,
+conformance tests, conformance packages, and conformance test classes _SHALL_ be assigned a unique identifier and/or label.
+guidance:: In the OGC, the enforcement of this requirement and its associated recommendation is the purview of the OGC Naming Authority or its equivalent.
 ====
 
-NOTE: In the OGC, the enforcement of this requirement and its associated recommendation is the purview of the OGC Naming Authority or its equivalent.
