--- a/sources/abstract_tests/core/ATS20_core-requirements-separate.adoc
+++ b/sources/abstract_tests/core/ATS20_core-requirements-separate.adoc
@@ -1,7 +1,9 @@
 [[ats_core-requirements-separate]]
 [abstract_test]
+.There is a named Core requirements class
 ====
 [%metadata]
+name:: There is a named Core requirements class
 identifier:: /conf/core/core-requirements-separate
 target:: /req/core/core-requirements-separate
 test-purpose:: Validate that the standard defines and identifies a core set of requirements as a separate requirements class with a corresponding conformance class.
