--- a/sources/abstract_tests/core/ATS26_optional-requirements.adoc
+++ b/sources/abstract_tests/core/ATS26_optional-requirements.adoc
@@ -1,7 +1,9 @@
 [[ats_optional-requirements]]
 [abstract_test]
+.Optional requirements are organized as requirements classes
 ====
 [%metadata]
+name:: Optional requirements are organized as requirements classes
 identifier:: /conf/core/optional-requirements
 target:: /req/core/optional-requirements
 test-purpose:: Validate that the only conditional (optional) requirements acceptable in the standard are expressed as a list of conformance classes to be passed.
