--- a/sources/abstract_tests/core/ATS28_reqs-are-in-class.adoc
+++ b/sources/abstract_tests/core/ATS28_reqs-are-in-class.adoc
@@ -1,7 +1,9 @@
 [[ats_requirements-are-in-class]]
 [abstract_test]
+.Requirements are in class
 ====
 [%metadata]
+name:: Requirements are in class
 identifier:: /conf/core/reqs-are-in-class
 target:: /req/core/reqs-are-in-class
 test-purpose:: Validate that each requirement in the standard is associated with exactly one requirements class.
