--- a/sources/requirements/core/REQ16_co-dependent-requirements.adoc
+++ b/sources/requirements/core/REQ16_co-dependent-requirements.adoc
@@ -1,9 +1,9 @@
-[[req_co-dependent-requirements]]
-[[req-16]]
 
 [requirement]
+.Co-dependent requirements are in the same requirements class
 ====
 [%metadata]
+name:: Co-dependent requirements are in the same requirements class
 identifier:: /req/core/co-dependent-requirements
 part:: If any two requirements are co-dependent (each dependent on the other) then they _SHALL_ be in the same requirements class.
 part:: If any two requirements classes are co-dependent, they _SHALL_ be merged into a single requirements class.
