--- a/sources/requirements/core/REQ19_profile-conformance.adoc
+++ b/sources/requirements/core/REQ19_profile-conformance.adoc
@@ -1,9 +1,9 @@
-[[req_profile-conformance]]
-[[req-19]]
 
 [requirement]
+.Profile conformance tests defined as union of conformance classes
 ====
 [%metadata]
+name:: Profile conformance tests defined as union of conformance classes
 identifier:: /req/core/profile-conformance
-part:: The conformance tests for a profile of a standard _SHALL_ be defined as the union of a list of conformance classes that are to be satisfied by that profile’s standardization targets.
+statement:: The conformance tests for a profile of a standard _SHALL_ be defined as the union of a list of conformance classes that are to be satisfied by that profile’s standardization targets.
 ====
