--- a/sources/requirements/core/REQ5_test-class-single-standardization-target.adoc
+++ b/sources/requirements/core/REQ5_test-class-single-standardization-target.adoc
@@ -1,10 +1,10 @@
-[[req_test-class-single-standardization-target]]
 
-[[req-5]]
 
 [requirement]
+.Test class uniform standardization target type
 ====
 [%metadata]
+name:: Test class uniform standardization target type
 identifier:: /req/core/test-class-single-standardization-target-type
-part:: All conformance tests in a single conformance test class _SHALL_ have the same standardization target type.
+statement:: All conformance tests in a single conformance test class _SHALL_ have the same standardization target type.
 ====
