chore: update metadata to use latest layout

--- a/sources/document.adoc
+++ b/sources/document.adoc
@@ -6,8 +6,8 @@
 :docnumber: 08-131r5
 :edition: 1.1.0
 :received-date: 2025-08-22
-:issued-date: 2025-xx-xx
-:published-date: 2025-xx-xx
+:issued-date: 2025-08-02
+:published-date: 2025-08-22
 :copyright-year: 2025
 :fullname: Carl Reed, PhD
 :role: editor
